--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("font-awesome.min.css");
+@import url("font-mfizz-1.2/font-mfizz.css")
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 /*
 	Photon by HTML5 UP
